--- a/Lufene Mark Travis_portfolio.html
+++ b/Lufene Mark Travis_portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lufene Mark Travis - Portfolio</title>
+    <title>Lufene Mark Travis bscs - Portfolio</title>
 </head>
 <!--<style>
     h2{
@@ -80,7 +80,7 @@
     <tr>
         <td>CSC 1102</td>
         <td>Fundamentals of Computing</td>
-        <td>72</td>
+        <td>74</td>
         <td>4</td>
         <td>4</td>
     </tr>
