--- a/week5 and 4/Lufene Mark Travis_portfolio.html
+++ b/week5 and 4/Lufene Mark Travis_portfolio.html
@@ -9,6 +9,14 @@
   <link rel="stylesheet" href="./css.css"> <!-- Link to external CSS file -->
 </head>
 <body>
+  <!-- Loading Overlay -->
+  <div class="loading-overlay">
+      <div class="loading-spinner"></div>
+  </div>
+
+  <!-- Progress Bar -->
+  <div class="progress-bar"></div>
+
   <!-- Dark/Light Mode Toggle Button -->
   <button class="theme-toggle" onclick="toggleTheme()">
       <i class="fas fa-moon"></i>
@@ -23,7 +31,8 @@
           <div class="links">
               <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100"><a href="#">Home</a></div>
               <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200"><a href="#education">Education</a></div>
-              <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300"><a href="#experience">Experience</a></div>
+              <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300"><a href="#skills">Skills</a></div>
+              <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400"><a href="#experience">Experience</a></div>
               <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="500"><a href="#contact">Contact</a></div>
               <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="600"><a href="#hobbies">Hobbies</a></div>
           </div>
@@ -34,7 +43,8 @@
       <div class="dropdown">
           <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="100"><a href="#">Home</a></div>
           <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="200"><a href="#education">Education</a></div>
-          <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300"><a href="#experience">Experience</a></div>
+          <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300"><a href="#skills">Skills</a></div>
+          <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="400"><a href="#experience">Experience</a></div>
           <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="500"><a href="#contact">Contact</a></div>
           <div class="link" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="600"><a href="#hobbies">Hobbies</a></div>
       </div>
@@ -148,6 +158,73 @@
       </div>
   </section>
 
+  <!-- Skills Section -->
+  <section id="skills">
+      <div class="skills-container" data-aos="fade-up" data-aos-duration="1500">
+          <h2>My Skills</h2>
+          <div class="skills-grid">
+              <div class="skill-item" data-aos="fade-up" data-aos-delay="100">
+                  <div class="skill-name">
+                      <span>HTML/CSS</span>
+                      <span class="skill-percentage">90%</span>
+                  </div>
+                  <div class="skill-bar">
+                      <div class="skill-progress" style="--progress: 90%"></div>
+                  </div>
+              </div>
+              <div class="skill-item" data-aos="fade-up" data-aos-delay="200">
+                  <div class="skill-name">
+                      <span>JavaScript</span>
+                      <span class="skill-percentage">85%</span>
+                  </div>
+                  <div class="skill-bar">
+                      <div class="skill-progress" style="--progress: 85%"></div>
+                  </div>
+              </div>
+              <div class="skill-item" data-aos="fade-up" data-aos-delay="300">
+                  <div class="skill-name">
+                      <span>Python</span>
+                      <span class="skill-percentage">80%</span>
+                  </div>
+                  <div class="skill-bar">
+                      <div class="skill-progress" style="--progress: 80%"></div>
+                  </div>
+              </div>
+              <div class="skill-item" data-aos="fade-up" data-aos-delay="400">
+                  <div class="skill-name">
+                      <span>Java</span>
+                      <span class="skill-percentage">75%</span>
+                  </div>
+                  <div class="skill-bar">
+                      <div class="skill-progress" style="--progress: 75%"></div>
+                  </div>
+              </div>
+              <div class="skill-item" data-aos="fade-up" data-aos-delay="500">
+                  <div class="skill-name">
+                      <span>C++</span>
+                      <span class="skill-percentage">70%</span>
+                  </div>
+                  <div class="skill-bar">
+                      <div class="skill-progress" style="--progress: 70%"></div>
+                  </div>
+              </div>
+              <div class="skill-item" data-aos="fade-up" data-aos-delay="600">
+                  <div class="skill-name">
+                      <span>Problem Solving</span>
+                      <span class="skill-percentage">85%</span>
+                  </div>
+                  <div class="skill-bar">
+                      <div class="skill-progress" style="--progress: 85%"></div>
+                  </div>
+              </div>
+          </div>
+          <!-- Back Button -->
+          <div class="back-btn-container">
+              <button class="back-btn" onclick="scrollToTop()">Back to Top</button>
+          </div>
+      </div>
+  </section>
+
   <!-- Experience Section -->
   <section id="experience">
       <div class="experience-container" data-aos="fade-up" data-aos-duration="1500">
@@ -215,6 +292,23 @@
     AOS.init({offset:0});
   </script>
   <script>
+      // Loading Animation
+      window.addEventListener('load', function() {
+          const loadingOverlay = document.querySelector('.loading-overlay');
+          loadingOverlay.style.opacity = '0';
+          setTimeout(() => {
+              loadingOverlay.style.display = 'none';
+          }, 500);
+      });
+
+      // Progress Bar
+      window.addEventListener('scroll', function() {
+          const winScroll = document.body.scrollTop || document.documentElement.scrollTop;
+          const height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
+          const scrolled = (winScroll / height) * 100;
+          document.querySelector('.progress-bar').style.setProperty('--scroll', scrolled + '%');
+      });
+
       // JavaScript for Hamburger Menu Toggle
       function hamburg() {
           const dropdown = document.querySelector('.dropdown');
